<resources>
    <string name="app_name">Location Provider</string>
    <string name="location_provider_selector">Location Provider Selector</string>
    <string name="your_location_will_appear_here">Your location will appear here</string>
    <string name="select_location_provider">Select Location Provider:</string>
    <string name="gps">GPS</string>
    <string name="network">Network</string>
    <string name="refresh_location">Refresh Location</string>
</resources>